# os-labs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lab1/: CMakeLists.txt  main.cpp
src/lab2/: CMakeLists.txt  main.cpp  rsa.cpp  rsa.h
src/lab3/: CMakeLists.txt  main.c  resourcelibrary.cpp  rsa.cpp  rsa.def  rsa.h
src/lab3/part1_dll/: CMakeLists.txt  main.c
src/lab3/part2_resources/: CMakeLists.txt  main.cpp  resourcelibrary.cpp  resourcelibrary.h
src/lab3/part2_resources/res/english/: CMakeLists.txt  Lab3ResourcesEnglish.rc  resource.h
src/lab3/part2_resources/res/ukrainian/: CMakeLists.txt  Lab3ResourcesUkrainian.rc
src/lab3/res/: CMakeLists.txt
src/lab3/res/ukrainian/: Lab3ResourcesUkrainian.rc
src/lab4/: CMakeLists.txt  builtincommands.cpp  builtincommands.h  builtinregistry.cpp  builtinregistry.h  configuration.cpp  configuration.h  iserialazable.h  log.h  mailbox.cpp  mailbox.h  main.cpp  settings.cpp  settings.h
src/lab4/cli/: CMakeLists.txt
src/lab4/cli/include/cli/: command.h  commandinterpreter.h  commandregistry.h
src/lab4/cli/src/: command.cpp  commandinterpreter.cpp
src/lab7/: CMakeLists.txt
src/lab7/Task1/: CMakeLists.txt
src/lab7/Task1/AppLauncher/: CMakeLists.txt  main.cpp
src/lab7/Task1/FileReader/: CMakeLists.txt  main.cpp
src/lab7/Task1/NotepadLauncher/: CMakeLists.txt  main.cpp
src/lab7/Task1/Utils/: CMakeLists.txt
src/lab7/Task1/Utils/include/Utils/: file.h  output.h  process.h
src/lab7/Task2/: CMakeLists.txt  main.cpp
src/lab7/Task3/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
